--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,7 +6,7 @@ fact_caching_timeout = 10
 fact_caching_connection = /tmp/.ansible-cache
 hash_behaviour = merge
 nocows = 1
-remote_user = docker
+remote_user = root
 roles_path = roles
 verbose_to_stderr = True
 private_key_file = files/id_rsa_ansible
