--- a/ansible/dev.ini
+++ b/ansible/dev.ini
@@ -7,17 +7,17 @@ app1
 [all:vars]
 instance=dev
 domain=example.local
-database_host=192.168.99.102
+database_host=192.168.99.105
 database_port=6543
-consul_host=192.168.99.102:8500
+consul_host=192.168.99.105:8500
 
 
 [managers]
-default ansible_host=192.168.99.101
+cluster1 ansible_host=192.168.99.104
 
 [workers]
-app1 ansible_host=192.168.99.102 persistent_node=True
-app2 ansible_host=192.168.99.103
+app1 ansible_host=192.168.99.105 persistent_node=True
+app2 ansible_host=192.168.99.106
 
 [swarm:children]
 managers
