--- a/ansible/roles/swarm/docker-swarm/vars/main.yml
+++ b/ansible/roles/swarm/docker-swarm/vars/main.yml
@@ -2,4 +2,4 @@
 swarm_leader_hostname: "{{ groups['managers'][0] }}"
 swarm_leader: "{{ inventory_hostname == swarm_leader_hostname }}"
 leader_addr: "{{ swarm_leader_hostname }}:2377"
-advertise_addr: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
+advertise_addr: "{{ ansible_host }}"
