--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -24,6 +24,7 @@ internal_poll_interval = 0.001
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=600s -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=publickey -o HashKnownHosts=yes
+ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q root@172.22.1.11"'
 pipelining = true
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 
