--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -23,7 +23,7 @@ forks = 20
 internal_poll_interval = 0.001
 
 [ssh_connection]
-ssh_args = -o ProxyCommand="ssh -W %h:%p jerry@172.22.1.11" -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=600s -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=publickey -o HashKnownHosts=yes
+ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=600s -o UserKnownHostsFile=/dev/null -o PreferredAuthentications=publickey -o HashKnownHosts=yes
 pipelining = true
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 
