--- a/ansible/dev.ini
+++ b/ansible/dev.ini
@@ -5,7 +5,7 @@ app1
 app1
 
 [all:vars]
-ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11"'
+ansible_ssh_common_args='-o ProxyCommand="ssh -A -W %h:%p -q jerry@172.22.1.11"'
 instance=dev
 domain=example.local
 database_host=192.168.99.105
