--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,5 +41,7 @@ deploy:
     INSTANCE: dev
   script:
     - cd ansible
+    - ssh jerry@172.22.1.11 -C ls
+    - ssh -o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls
     - ansible-playbook -i ${INSTANCE}.ini playbook/app.yml -D
 
