--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,9 @@ test:
   image: pad92/ansible-alpine:latest
   stage: tests
   script:
+    - ssh-add -l
+    - ssh jerry@172.22.1.11 -C ls
+    - ssh -o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls
     - echo test ok
 
 build:
