--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ test:
   script:
     - ssh-add -l
     - ssh jerry@172.22.1.11 -C ls
-    - ssh -o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls
+    - ssh -o ProxyCommand="ssh -A -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls
     - echo test ok
 
 build:
