--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ test:
   script:
     - echo test ok
     - cd ansible
-    - ssh jerry@172.22.1.11 -C ls
-    - ssh -o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls || true
+    - ssh jerry@172.22.1.11 ls
+    - ssh -A -o ProxyCommand="ssh -A -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 ls
     - ansible-playbook -i ${INSTANCE}.ini playbook/app.yml -D
 
 # build:
