--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,25 +29,28 @@ test:
     INSTANCE: dev
   script:
     - echo test ok
+
+build:
+  image: pad92/ansible-alpine:latest
+  stage: build
+  script:
+    - echo build ok
+
+.deploy:
+  image: pad92/ansible-alpine:latest
+  stage: deploy
+  script:
     - cd ansible
-    - ssh jerry@172.22.1.11 ls
-    - ssh -A -o ProxyCommand="ssh -A -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 ls
     - ansible-playbook -i ${INSTANCE}.ini playbook/app.yml -D
 
-# build:
-#   image: pad92/ansible-alpine:latest
-#   stage: build
-#   script:
-#     - echo build ok
+deploy:dev:manual:
+  extends: .deploy
+  variables:
+    INSTANCE: dev
 
-# deploy:
-#   image: pad92/ansible-alpine:latest
-#   stage: deploy
-#   variables:
-#     INSTANCE: dev
-#   script:
-#     - cd ansible
-#     - ssh jerry@172.22.1.11 -C ls
-#     - ssh -o ProxyCommand="ssh -W %h:%p -q jerry@172.22.1.11" root@192.168.99.104 -C ls
-#     - ansible-playbook -i ${INSTANCE}.ini playbook/app.yml -D
+deploy:stage:manual:
+  extends: .deploy
+  variables:
+    INSTANCE: dev
+
 
