--- a/ansible/roles/app/hello/tasks/main.yml
+++ b/ansible/roles/app/hello/tasks/main.yml
@@ -34,6 +34,8 @@
       - hello-pull
 
   - name: Start
+    debug:
+      msg: Restarting service
     notify: docker-update
     tags:
       - up
