--- a/ansible/roles/infra/traefik/tasks/main.yml
+++ b/ansible/roles/infra/traefik/tasks/main.yml
@@ -46,6 +46,8 @@
       - traefik-pull
 
   - name: Start
+    debug:
+      msg: Restarting service
     notify: docker-update
     tags:
       - up
