--- a/ansible/roles/infra/portainer/tasks/main.yml
+++ b/ansible/roles/infra/portainer/tasks/main.yml
@@ -34,6 +34,8 @@
       - portainer-pull
 
   - name: Start
+    debug:
+      msg: Restarting service
     notify: docker-update
     tags:
       - start
