--- a/ansible/roles/app/hello/tasks/main.yml
+++ b/ansible/roles/app/hello/tasks/main.yml
@@ -36,6 +36,7 @@
   - name: Start
     debug:
       msg: Restarting service
+    changed_when: "True"
     notify: docker-update
     tags:
       - up
