--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ build:
   stage: deploy
   variables:
     CLOUD: example
+    INSTANCE: dev
   script:
     - cd ansible
     - ansible-playbook -i ${CLOUD}.ini -e instance=${INSTANCE} playbook/app.yml -D
@@ -48,47 +49,57 @@ build:
     name: ${CLOUD}/${INSTANCE}/hello
     url: http://hello.${INSTANCE}.${CLOUD}.local/
     on_stop: stop_example
-    #auto_stop_in: 1 week
+
+.deploy_dev_static:
+  extends: .deploy
+  variables:
+    CLOUD: example
+    INSTANCE: dev
+  environment:
+    on_stop: stop:example:dev
+
+.deploy_stage_static:
+  extends: .deploy
+  variables:
+    CLOUD: example
+    INSTANCE: stage
+  environment:
+    on_stop: stop:example:stage
 
 deploy:example:dev:manual:
-  extends: .deploy
+  extends: .deploy_dev_static
   when: manual
-  variables:
-    INSTANCE: dev
 
 deploy:example:stage:manual:
-  extends: .deploy
+  extends: .deploy_stage_static
   when: manual
-  variables:
-    INSTANCE: stage
 
-# .stop:
-#   stage: deploy
-#   when: manual
-#   variables:
-#     CLOUD: example
-#     GIT_STRATEGY: none
-#     INSTANCE: dev
-#   environment:
-#     name: ${CLOUD}/${INSTANCE}/hello
-#     action: stop
 
-stop_example:
+.stop:
   image: pad92/ansible-alpine:latest
   stage: deploy
   script:
     - echo stop
     - echo ${CLOUD}
     - echo ${INSTANCE}
+    - cd ansible
+    - ansible-playbook -i ${CLOUD}.ini -e instance=${INSTANCE} playbook/app.yml -D -t hello-down
   when: manual
   environment:
     name: ${CLOUD}/${INSTANCE}/hello
     action: stop
   
-# deploy:example:stage:
-#   extends: .stop
-#   variables:
-#     INSTANCE: stage
+stop:example:dev:
+  extends: .stop
+  variables:
+    CLOUD: example
+    INSTANCE: dev
+
+stop:example:stage:
+  extends: .stop
+  variables:
+    CLOUD: example
+    INSTANCE: stage
 
 
 
